name:           Contas
version:        0.1
synopsis:       Contas
author:         Lessandro Mariano
license:        MIT
license-file:   LICENSE.txt
build-type:     Simple
cabal-version:  >= 1.2

executable contas
  build-depends:  base, network, mtl
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded
